# nexus-node

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  setup.sh
.github/workflows/: eng-chain-cosmos-build.yml  eng-chain-reth-build.yml
cosmos/: .gitignore  CODEBASE_OVERVIEW.md  Dockerfile  Makefile  README.md  UPGRADE_ALERTING.md  config.yml  go.mod  go.sum  readme.md
cosmos/app/: add_validator_test.go  app.go  chain.go  chain_test.go  export.go  halt_logging.go  halt_logging_test.go  migrations.go  proposal.go  proposal_test.go  remove_validator_test.go  rpc_readiness.go  rpc_readiness_test.go  sim_bench_test.go  sim_test.go  upgrade_logging.go  upgrade_logging_test.go  webhook_notifier.go  webhook_notifier_test.go
cosmos/app/types/: chain.go  chain_test.go
cosmos/cmd/nexusd/: main.go
cosmos/cmd/nexusd/cmd/: commands.go  config.go  root.go  root_test.go  testnet.go  testnet_multi_node.go
cosmos/docs/: grpc-communication.md
cosmos/docs/static/: openapi.json
cosmos/genesis/: genesis.go  genesis_test.go
cosmos/genesis/chain-specs/devnet/: cosmos.json  reth.json
cosmos/genesis/chain-specs/localnet/: cosmos.json  reth.json
cosmos/genesis/chain-specs/mainnet/: cosmos.json  reth.json
cosmos/genesis/chain-specs/testnet/: cosmos.json  reth.json
cosmos/lib/: config.go  core_client.go  engine.go  jwt.go
cosmos/lib/tests/: grpc_jwt_test.go  jwt_fuzz_test.go
cosmos/proto/nexus/evm/v1/: consensus.proto  genesis.proto  params.proto  tx.proto
cosmos/testutil/server/: util.go
cosmos/tools/: tools.go
cosmos/x/evm/keeper/: abci.go  abci_fuzz_test.go  async.go  msg_server.go  msg_server_fuzz_test.go  query_params.go  readiness.go  transaction_size_validation_test.go
cosmos/x/evm/module/: module.go  simulation.go
cosmos/x/evm/types/: consensus.pb.go  errors.go  genesis.go  genesis_compat.go  genesis_compat_test.go  keys.go  params.pb.go  query.pb.go  types.go
cosmos/x/globalfee/ante/: fee.go  fee_test.go
cosmos/x/globalfee/keeper/: keeper_test.go
cosmos/x/globalfee/module/: depinject.go
cosmos/x/globalfee/types/: keys.go  params.go
eng/chain/cosmos/: .golangci.yml  CODEBASE_OVERVIEW.md  Dockerfile  UPGRADE_ALERTING.md  docker-entrypoint.sh  go.mod  go.sum  readme.md
eng/chain/cosmos/app/: add_validator_test.go  ante.go  app.go  app_config.go  block_hooks.go  chain.go  chain_test.go  genesis_account.go  genesis_validation_test.go  halt_logging.go  halt_logging_test.go  ibc.go  metrics.go  proposal.go  proposal_test.go  remove_validator_test.go  unjail_test.go  upgrade_logging.go  upgrade_logging_test.go  upgrade_routing_test.go  upgrades.go
eng/chain/cosmos/docs/: grpc-communication.md
eng/chain/cosmos/lib/: core_client.go  cosmos_grpc_server.go  engine.go  grpc_jwt.go  grpc_test.go
eng/chain/reth/: Cargo.toml  Dockerfile  docker-entrypoint.sh
eng/chain/reth/block-time-util/: Cargo.toml  README.md
eng/chain/reth/evm/: Cargo.toml
eng/chain/reth/evm/src/: config.rs  evm.rs  forks.rs  main.rs  nexus.rs
infra/terraform/nexus-l1/: README.md
reth/: Cargo.toml  Dockerfile  README.md
reth/block-time-util/: Cargo.toml  README.md
reth/block-time-util/src/: main.rs
reth/evm/: Cargo.toml
reth/evm/src/: block.rs  forks.rs  nexus.rs
(+56 files in other folders)
